# firebolt-core-sdk

./: .gitignore  CHANGELOG.md  package.json
src/native/: CMakeLists.txt  build-core.sh  cmake.sdk
src/native/ctest/: CMakeLists.txt  Main.c  build-test.sh
src/native/scripts/: installsdk.sh
src/native/sdk/: CMakeLists.txt
src/native/sdk/Tests/: CMakeLists.txt  FireboltCoreSDKTests.cpp  FireboltCoreSDKTests.h  fireboltcoresdktest.h
src/native/sdk/Tests/App/: CMakeLists.txt  FireboltCoreSDKTestsMain.c
src/native/src/: CMakeLists.txt  Module.h
src/native/test/: .CMakeLists.txt.swp  CMakeLists.txt  CoreSDKCTests.h  CoreSDKTestGeneratedCode.c  CoreSDKTestGeneratedCode.h  FireboltCoreSDKTests.cpp  FireboltCoreSDKTests.h  FireboltCoreSDKTestsMain.c  Main.c  Module.h  fireboltcoresdktest.h
src/sdks/core/src/cpp/sdk/ctest/: CMakeLists.txt  Main.c
src/sdks/core/src/cpp/sdk/test/: CoreSDKTestGeneratedCode.c  CoreSDKTestGeneratedCode.h
src/sdks/core/src/cpp/templates/Metrics/src/: module_impl.cpp  module_impl.h
src/sdks/manage/src/cpp/sdk/cpptest/: Main.cpp
